[package]
name = "EMUtil"
version = "0.1.0"
edition = "2021"
authors = ["ElectroMutex"]
description = "This project will be contained with small utilities"
license = "MIT"
documentation = "hhttps://github.com/SkillfulElectro/rusty-util.git"
homepage = "https://github.com/SkillfulElectro/rusty-util.git"
repository = "https://github.com/SkillfulElectro/rusty-util.git"
readme = "README.md"

[dependencies]
